# ragprobe

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/regulatory/: queries.txt
examples/regulatory/corpus/: gdpr_articles.txt
examples/technical/: queries.txt
examples/technical/corpus/: product_docs.txt
examples/wiki/: queries.txt
examples/wiki/corpus/: articles.txt
ragprobe/: __init__.py  cli.py  loaders.py  models.py  profiles.py  scorer.py
tests/: test_examples.py  test_integration.py  test_loaders.py  test_models.py  test_profiles.py  test_scorer.py
