[project]
name = "ragprobe"
version = "0.1.0"
description = "Pre-deployment domain difficulty diagnostic for RAG. Know if your benchmark transfers — before you deploy."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Oleksii Alexapolsky", email = "metawake@users.noreply.github.com"}]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["rag", "retrieval", "evaluation", "benchmark", "information-retrieval", "nlp", "domain-difficulty"]

[project.urls]
Homepage = "https://github.com/metawake/ragprobe"
Repository = "https://github.com/metawake/ragprobe"
Issues = "https://github.com/metawake/ragprobe/issues"

[project.optional-dependencies]
cli = ["click>=8.0"]
dev = ["pytest>=7.0", "pytest-cov"]
all = ["click>=8.0"]

[project.scripts]
ragprobe = "ragprobe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ragprobe"]
